@@ -81,6 +81,17 @@ This method returns the wrapped 'mock' object.  The object is actually a Test::M
 exactly as the object originally passed to the constructor would be, with the additional hooks provieded by the wrapper
 baked in.
 
+=item $wrapper->resetCalls([$method])
+
+This method clears out the memory of calls that have been made, which is usefull if using the same mock wrapper instance
+multiple tests. When called without arguments, all call history is cleared.  With the optional $method argument, only
+history for that method is called.
+
+=item $wrapper->resetMocks([$method])
+
+This method clears out all previously provided mocked methods. Without arguments, all mocks are cleared. With the optional
+$method argument, only mocks for that method are cleared.
+
 =item $wrapper->addMock($method, [OPTIONS])
 
 This method is used to add a new mocked method call. Currently supports two optional parameters:
