@@ -2,6 +2,12 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+Refined "resetCalls" to allow only history of specific methods to be clear.
+Added tests for "resetCalls"
+
+Added method "resetMocks" to reset the state of specified mock conditions,
+with tests for same.
+
 0.03 Wed Mar 04 2015
 
 Added method "resetCalls" to allow clearing the call records. Useful if you use the same
